--- a/OnePassCore/build.gradle
+++ b/OnePassCore/build.gradle
@@ -1,14 +1,16 @@
 //
 
 ext.lib = [
-        core           : project(':core'),
-        gson           : 'com.squareup.retrofit2:converter-gson:2.0.+',
-        jackson        : 'com.squareup.retrofit2:converter-jackson:2.0.+',
-        retrofit       : 'com.squareup.retrofit2:retrofit:2.0.+',
-        okhttp         : 'com.squareup.okhttp:logging-interceptor:2.6.0',
-        guava          : 'com.google.guava:guava:19.0-rc3',
-        junit          : 'junit:junit:4.12',
-        playServices   : 'com.google.android.gms:play-services:7.8.+'
+        core        : project(':core'),
+        gson        : 'com.squareup.retrofit2:converter-gson:2.0.+',
+        jackson     : 'com.squareup.retrofit2:converter-jackson:2.0.+',
+        retrofit    : 'com.squareup.retrofit2:retrofit:2.1.+',
+        okhttp      : 'com.squareup.okhttp:logging-interceptor:2.6.0',
+        guava       : 'com.google.guava:guava:19.0-rc3',
+        playServices: 'com.google.android.gms:play-services:7.8.+',
+
+        junit       : 'junit:junit:4.12',
+        mockito     : 'org.mockito:mockito-core:1.10.19'
 ]
 
 buildscript {
